fixed image alignmeng issues

--- a/css/skills_style.css
+++ b/css/skills_style.css
@@ -310,7 +310,7 @@ img {
 .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 15%;
   width: auto;
   padding: 16px;
   margin-top: -50px;
